Change log: change When() code to be more Kotlin style

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ out/
 src/com/thomsonreuters/elektron/kotlin/TestKotlin.kt
 src/com/thomsonreuters/elektron/kotlin/TestKotlin2.kt
 Diagram/~$Diagram.pptx
-.idea
+.idea/
