--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ src/com/thomsonreuters/elektron/kotlin/TestKotlin.kt
 src/com/thomsonreuters/elektron/kotlin/TestKotlin2.kt
 Diagram/~$Diagram.pptx
 .idea/
+errormsg.txt
