--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="build" name="exchangename">
+<project basedir="." default="build" name="EMAKotlin">
 	
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
@@ -7,9 +7,11 @@
 
     <property name="dist.dir" value="./"/>
     <property name="libs.dir" value="${dist.dir}/libs"/>
-    <property name="ema.kotlin.dir" value="${dist.dir}" />
+    <property name="kotlin.dir" value="D:/Project/Compilers/kotlinc"/>
+    <property name="dist.dir.output" value="${dist.dir}/out/" />
 	
-	<property name="kotlin.lib" value="D:/Project/Compilers/kotlinc/lib" />
+	<property name="kotlin.lib" value="${kotlin.dir}/lib" />
+    <property name="dic.dic" value="${dist.dir}/etc" />
 	
 	<typedef resource="org/jetbrains/kotlin/ant/antlib.xml" classpath="${kotlin.lib}/kotlin-ant.jar"/>
 
@@ -19,32 +21,32 @@
 
     <target name="clean">
         <echo message="Cleaning up old build output" />
-        <delete>
-            <fileset dir="${ema.kotlin.dir}/out" includes="**/*.class"/>
-            <fileset file="${ema.kotlin.dir}/out/EmaConfig.xml"/>
-        </delete>
+        <!--<delete includeEmptyDirs="true" failonerror="false">
+            <fileset dir="${dist.dir.output}" includes="**/*.class"/>
+            <fileset dir="${dist.dir.output}/etc" includes="**/*"/>
+            <fileset file="${dist.dir.output}/EmaConfig.xml"/>
+
+        </delete>-->
+        <fileset dir="${dist.dir.output}">
+            <include name="*"/>
+        </fileset>
     </target>
 
     <target name="build-ema-kotlin">
         <echo message="Building EMA Java Kotlin src code" />
-        <!--<javac debug="true" debuglevel="${debuglevel}"
-               source="${source}"
-               target="${target}"
-               includeantruntime="false"
-               destdir="${ema.kotlin.dir}/out">
-            <src path="${ema.kotlin.dir}/src"/>
-            <classpath refid="exchangename.classpath"/>
-        </javac>-->
+
 		
 		<kotlinc 
                includeRuntime="false"
-               output="${ema.kotlin.dir}/out">
-            <src path="${ema.kotlin.dir}/src"/>
+               output="${dist.dir.output}">
+            <src path="${dist.dir}/src"/>
             <classpath refid="ema.classpath"/>
         </kotlinc>
-		
-		<!--<kotlinc src="${ema.kotlin.dir}/src" output="hello.jar"/>-->
-        <copy file="EmaConfig.xml" todir="${ema.kotlin.dir}/out"/>
+
+        <copy file="EmaConfig.xml" todir="${dist.dir.output}"/>
+        <copy todir="${dist.dir.output}/etc" >
+            <fileset dir="${dic.dic}" includes="**"/>
+        </copy>
     </target>
 
 
