--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 out/
 src/com/thomsonreuters/elektron/kotlin/TestKotlin.kt
 src/com/thomsonreuters/elektron/kotlin/TestKotlin2.kt
+src/com/refinitiv/realtime/kotlin/TestKotlin.kt
 Diagram/~$Diagram.pptx
 .idea/
 errormsg.txt
