--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.4.21</kotlin.version>
+        <!--<kotlin.version>1.4.21</kotlin.version>-->
+        <kotlin.version>1.5.31</kotlin.version>
         <main.class>com.refinitiv.realtime.kotlin.Kotlin_Consumer_100Kt</main.class>
-        <ema.version>3.6.0.0</ema.version>
+        <ema.version>3.6.3.0</ema.version>
     </properties>
 
     <repositories>
@@ -38,31 +39,12 @@
             <artifactId>ema</artifactId>
             <version>${ema.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.refinitiv.eta</groupId>
-            <artifactId>eta</artifactId>
-            <version>${ema.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.refinitiv.eta.valueadd</groupId>
-            <artifactId>etaValueAdd</artifactId>
-            <version>${ema.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.refinitiv.eta.valueadd.cache</groupId>
-            <artifactId>etaValueAddCache</artifactId>
-            <version>${ema.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.refinitiv.eta.ansi</groupId>
-            <artifactId>ansipage</artifactId>
-            <version>${ema.version}</version>
-        </dependency>
-
+        
         <!-- Kotlin -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <!--<artifactId>kotlin-stdlib-jdk8</artifactId>-->
+            <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
